# goitneo-python-MCS3-team8-darkcoders

./: .gitignore  LICENSE  README.md  records.pkl  setup.cfg  usage example.txt
BlackBook/: __init__.py  actions.py  datasources.py  main.py  test.py
BlackBook/classes/: AddressBook.py  Birthday.py  DefaultExecutionDict.py  Field.py  Name.py  Note.py  NoteBook.py  NoteManager.py  Phone.py  Query.py  Record.py  Storage.py  __init__.py  exception_handling.py  helper_methods.py
BlackBook/classes/commands/: AddContactCommand.py  AddNoteCommand.py  Command.py  EditContactCommand.py  EditNoteCommand.py  RemoveContactCommand.py  RemoveNoteCommand.py  SearchContactCommand.py  SearchNotesCommand.py
BlackBook/classes/fields/: AddressField.py  BirthdayField.py  EmailField.py  Field.py  NameField.py  NoteField.py  PhoneField.py  StringValueField.py
BlackBook/classes/query/: DateQueryField.py  Query.py  QueryField.py
BlackBook/commands/: AddContactCommand.py  AddNoteCommand.py  Command.py  EditContactCommand.py  EditNoteCommand.py  GetNotesByTagCommand.py  HelloCommand.py  HelpCommand.py  PrintAllContactsCommand.py  PrintAllNotesCommand.py  PrintNotesWithTagsCommand.py  RemoveContactCommand.py  RemoveNoteCommand.py  SearchContactsCommand.py  SearchNotesCommand.py  __init__.py
BlackBook/constants/: __init__.py  constants.py
tests/: add_command_test.py
