[metadata]
name = BlackBook
version = 1.0
author = DarkCoders Team
author_email = d.valantsevich.md@gmail.com
description = ---
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = BlackBook