[metadata]
name = BlackBook
version = 1.0.1
author = DarkCoders Team
author_email = d.valantsevich.md@gmail.com
description = ---
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt
[options.entry_points]
console_scripts =
    BlackBookConsole = main:execute_console

[options]
packages = find:
package_dir =
    =BlackBook
install_requires = 
    prompt_toolkit

[options.packages.find]
where = BlackBook
include = *
